# pi-statusbar

./: .gitignore  Package.swift  README.legacy.md  README.md  generate_app_connect_qr.py  pyproject.toml
.pi/skills/pi-statusbar-release/: RELEASE-CHECKLIST.md  SKILL.md
Formula/: pi-statusbar.rb
Sources/PiStatusBar/: AgentMonitor.swift  DaemonClient.swift  Models.swift  PiStatusBarApp.swift  ProcessScanner.swift  SessionLocator.swift  SessionParser.swift
daemon/: API.md  pi-statusbar  pi_statusd.py  pi_statusd_http.py  refresh-all.sh  reinstall-via-brew.sh  setup-vm.sh  statusbar-app-service  statusbar-setup  statusd-service  statusdctl  teardown-vm.sh
